# promptshield

./: .gitignore  CONTRIBUTING.md  pyproject.toml  readme.md
examples/: aws_example.py  azure_example.py  backends_example.py  bitbucket_example.py  cloudflare_example.py  credentials_example.py  database_example.py  discord_example.py  docker_example.py  gcp_example.py  github_example.py  gitlab_example.py  heroku_example.py  injection_example.py  npm_example.py  observability_example.py  openai_example.py  pii_backends_example.py  pii_example.py  slack_example.py  ssh_example.py  stripe_example.py  telegram_example.py  tokens_example.py  twilio_example.py
promptshield/: __init__.py  context.py  exceptions.py  injection.py  models.py  scanner.py  shield.py
promptshield/backends/: __init__.py  base.py  detect_secrets_backend.py  injection_base.py  presidio_pii_backend.py  prompt_injection_defense_backend.py
promptshield/classifiers/: __init__.py  aws.py  azure.py  bitbucket.py  cloudflare.py  credentials.py  database.py  discord.py  docker.py  gcp.py  generic.py  github.py  gitlab.py  heroku.py  injection.py  npm.py  oauth.py  observability.py  openai.py  pii.py  slack.py  ssh.py  stripe.py  telegram.py  twilio.py
promptshield/detectors/: __init__.py  aws.py  azure.py  base.py  bitbucket.py  cloudflare.py  credentials.py  database.py  discord.py  docker.py  gcp.py  github.py  gitlab.py  heroku.py  injection.py  npm.py  observability.py  openai.py  pii.py  slack.py  ssh.py  stripe.py  telegram.py  tokens.py  twilio.py
promptshield/policies/: __init__.py  default.py
(+2 files in other folders)
